This file documents the revision history for mod_gearman.

next:
          - add --restrict_path option to restrict worker to certain paths

1.4.18 Mon Dec 15 11:52:56 CET 2014
          - fixed segfault in check_gearman

1.4.16 Thu Dec 11 11:13:27 CET 2014
          - fixed some potential memory and filedescriptor leaks
          - fixed using timeout return code (Scott Sanders)
          - fixed running jobs twice when worker hits max-jobs (Tobias Deiminger)
          - fixed init script exiting with 0 on errors (Adrián)

1.4.14 Fri Nov 15 21:44:18 CET 2013
          - fixed segfault when dupserver list was empty

1.4.12 Tue Nov  5 10:26:07 CET 2013
          - fixed send_gearman to send duplicate result to normal server (Brian Christiansen)
          - ensure worker are running and doing jobs after reload/sighup

1.4.10 Mon Aug  5 11:38:53 CEST 2013
          - fixed segfault on empty arguments (Michael Friedrich)
          - fixed commands containing quotes

1.4.8 Sat Jul 27 13:42:11 CEST 2013
          - ensure worker exits, even if shm blocks
          - request proper macro escaping for nagios 4

1.4.6 Tue Jun  4 17:03:57 CEST 2013
          - kill complete process group on timeout
          - close open filehandles before running check
          - added new option 'orphan_return' to set return code of orphaned checks

1.4.4 Thu May  3 15:48:34 CEST 2013
          - added 'route_eventhandler_like_checks' option
          - fixed leaking FDs on reloading neb
          - install mini-epn when epn is enabled
          - fixed executing only the first freshness check

1.4.2 Thu Jan 10 10:56:37 CET 2013
          - force check on orphaned events
          - added mini epn
          - added logrotate config (Ricardo Maraschini)
          - added new option load_limit1,5,15 to prevent new workers from spawning under heavy load. (sponsored by Ovido GmbH)

1.4.0 Thu Sep 25 22:14:31 CEST 2012
          - implemented support for nagios 4
